@@ -52,9 +52,12 @@ public:
 	 * with our input; it needs to be shared because our input
 	 * needs to feed parameters (e.g. from the "icy-metaint"
 	 * header) into it
+	 *
+	 * Throws on error (e.g. if the charset converter specified by
+	 * the URI fragment fails to initialize).
 	 */
 	IcyInputStream(InputStreamPtr _input,
-		       std::shared_ptr<IcyMetaDataParser> _parser) noexcept;
+		       std::shared_ptr<IcyMetaDataParser> _parser);
 	virtual ~IcyInputStream() noexcept;
 
 	IcyInputStream(const IcyInputStream &) = delete;
